...
      <Menu
        modifiers={[
          menuStyle("button"),
          buttonStyle("plain"),
          menuIndicator("hidden"),
          accessibilityLabel("Choose position"),
          accessibilityIdentifier("assign-position-menu"),
        ]}
        label={
          <VStack
            spacing={1}
            modifiers={[frame({ width: TITLE_WIDTH, height: TITLE_HEIGHT })]}
          >
...
      selected: props.history,
      sharesBackground: false,
      width: 40,
    },
    {
      type: "button",
      label: "Next Open Position",
      icon: { type: "sfSymbol", name: "forward.end" },
      onPress: () => {
        props.onNext?.();
      },
      disabled: props.onNext === undefined,
      sharesBackground: false,
...
