...
      <BottomActionBar
        actions={[
          {
            title: action,
            role: "destructive",
            onPress: onConfirm,
            testID: "confirm-destructive",
          },
          { title: "Cancel", onPress: onCancel, testID: "cancel-destructive" },
        ]}
      />
    </View>
  </Modal>
...
