...
      .disabled(!canChangeStatus)
      .accessibilityIdentifier("assign-detail-status")
      Button(role: .destructive, action: actions.unschedule) {
        Label("Unschedule", symbol: .delete)
      }
      .disabled(!canChangeStatus)
      .accessibilityIdentifier("assign-detail-unschedule")
    } else {
      Button(action: actions.add) {
        Label {
          Text("Add to \(slot.positionName)")
        } icon: {
          if isScheduling {
...
